css/main.css
body
{
	font-family: "Segoe UI", 'Product Sans', "Lucida Grande", Tahoma, sans-serif;
	font-size: 100%;
	margin: 0px;
}
a
{
	color: black;
	text-decoration: none;
}
input
{
	padding-left: 5px;
}
#sideMenu li
{
	position: relative;
	top: 70px;
	list-style: none;
	font-weight: bolder;
	font-size: 20px;
}
#sideMenu a
{
	transition: color 0.2s;
}
#sideMenu a:hover
{
	color: red;
}
#sideMenu a.active
{
	cursor: default;
	color: red;
	text-decoration: none !important;
}
ul
{
	margin-top: 5px;
	margin-bottom: 0px;
}
#header
{
	position: absolute;
	z-index: 1;
	width: 100%;
	color: black;
	height: 60px;
	min-width: 860px;
	/* Old from indigoBox: background: linear-gradient(to bottom, #222222, #111111); */
	background: #D2CFCF;
}
#headerText
{
  top: 21%;
  left: 85px;
  width: 50%;
  position: relative;
  font-size: 24px;
}
#main
{
	position: relative;
	top: 60px;
	left: 260px;
	width: 70%;
	min-width: 600px;
}
#pxNum
{
	width: 50px;
}
#sideMenu
{
	position: absolute;
	z-index: 0;
	bottom: 0px;
	width: 210px;
	height: 100%;
	background: linear-gradient(to right, white, rgb(228, 228, 228));
}
#siteTitler
{
	font-size: 26px;
	color: red;
	position: relative;
	top: 10px;
	font-weight: 500;
	margin-bottom: 10px;
	width: 50%;
}
#indigoBox
{
	 color: #A94EFF;
  font-weight: bold;
  text-decoration: underline;
}
#about
{
	position: relative;
	top: 5px;
	font-size: 18px;
}
#about img:hover
{
	position: relative;
	top: 2px;
	border-bottom: solid 2px rgb(179, 80, 179);
}
.option-row
{
	position: relative;
	margin-top: 8px;
	margin-bottom: 5px;
}
.limitType
{
	margin-left: 5px;
	padding: 1px;
}
.closeImage
{
	cursor: pointer;
	width: 19px;
	left: 535px;
	padding: 5px;
	top: -3px;
	position: absolute;
    border-radius: 100px;
	transition: background 0.2s;
}
.closeImage:hover
{
	background: #D8D8D8;
}
#popupBody
{
	font-family: "Segoe UI", "Open Sans", "Lucida Grande", Tahoma, sans-serif;
	font-size: 100%;
	width: 300px;
	background: #FEFEFE;
	height:250px;
}
#popupTitle
{
	margin-top: 0px;
    margin-bottom: 0px;
    position: absolute;
    top: 10px;
    left: 70px;
    font-size: 24px;
    font-weight: normal;
}
#popupLogo
{
	position: relative;
	top: 2px;
	/*left: 12px;*/
	width: 48px;
}
#logo
{
	position: absolute;
	top: 6px;
	left: 20px;
}
#sectionTitle
{
	font-weight: bold;
	text-decoration: underline;
	font-size: 21px;
	margin-top: 20px;
	margin-bottom: 5px;
}
#checkmark
{
	position: absolute;
	height: 21px;
	color: green;
	top: 2px;
	left: 160px;
}
#pause
{
	cursor: pointer;
}
.separator
{
	width: 100%;
	border-top: 2px groove white;
	margin: 5px -5px 5px -3px;
}
.popupText
{
	left:0px;
	right:0px;
	width:100%;
}
#cog
{
	height: 20px;
	position: relative;
	top: 4px;
	left: 5px;
}
#options-cont
{
	margin-top: 15px;
	padding-bottom: 5px;
	width:100%;
	color: #AC8484;
	text-align: center;
}
#options-cont:hover
{
	color: #AC8484;
}
#facebook
{
	color: darkblue;
}
#facebook:hover
{
	text-decoration: underline;
}
#buttons-bar
{
	position: relative;
	margin-top: 5px;
}
.popActive {
	color:Green;
	padding:3px;
	text-align:center;
	font-variant:small-caps;
	letter-spacing: 1.3px;
}
#popupHeader {
	display: flex;
	align-items: center;
	justify-content: center;
	background-color:Green;
	right:0px;
	width:100%;
	height:30px;
	color:#FFF;
	letter-spacing: 1px;
	font-size:18px;
	padding:4px;
	text-align: center;
	font-weight:500;
	box-shadow:0px 3px 6px #0000002e;
	fill: currentColor;
}
#popupRemainder {
	top:70px;
	right:5px;
	text-align:center;
	/*padding:5px;*/
	letter-spacing:0.5px;
	font-size:14px;
	padding-top:15px;
}
.popupIcon {
	width:24px;
	color:white;
}
.popupHeaderText {
	padding-left: 4px;
	vertical-align: middle;
}
svg {
	fill: currentColor;
	width: 24px;
}
.material-icons {
	padding-right:4px;
	vertical-align: middle;
}
.textEmphasize {
	color:#ff0000;
	font-weight: 500;
}
.popupRemainderText {
margin-left: 10%;
margin-right: 10%;
}

.button-limit {
	color: #B80A0A;
	text-align:center;
	box-shadow: 0px 3px 4px #0000002e;
	background-color: #F6F6F6;
	border: none;
	padding-top: 5px;
	padding-bottom: 5px;
	font-family: 'Segoe UI', 'Open Sans', sans-serif;
	font-weight: 600;
	letter-spacing: 0.2px;
	padding-left: 15px;
	padding-right: 15px;
	margin-left: auto;
	margin-right: auto;
	margin-top:5px;
	margin-bottom: 5px;
	cursor:pointer;
}

.button-limit:hover {
	background-color: #F1F1F1;
}

.button-limit-text {
	vertical-align: middle;
}

#button-container {
	text-align:center;
}

.refresh-icon {
	background-color: steelblue;
	color: white;
	font-size: 24px;
	position: relative;
	padding-bottom: 13px;
	border-radius: 500px;
	padding-left: 11px;
	padding-right: 9px;
	padding-top: 2px;
	vertical-align: baseline;
	box-shadow: 0px 1px 3px grey;
	display: inline-block;
	margin-bottom: -10px;
}

#refresh-container {
	padding-top:20px;
	cursor:pointer;
}

